src/test/ui/impl-trait/projection-mismatch-in-impl-where-clause.stderr
error[E0271]: type mismatch resolving `<() as Super>::Assoc == ()`
  --> $DIR/projection-mismatch-in-impl-where-clause.rs:13:14
   |
LL | fn test() -> impl Test {
   |              ^^^^^^^^^ type mismatch resolving `<() as Super>::Assoc == ()`
   |
note: expected this to be `()`
  --> $DIR/projection-mismatch-in-impl-where-clause.rs:6:18
   |
LL |     type Assoc = u8;
   |                  ^^
note: required because of the requirements on the impl of `Test` for `()`
  --> $DIR/projection-mismatch-in-impl-where-clause.rs:11:9
   |
LL | impl<T> Test for T where T: Super<Assoc = ()> {}
   |         ^^^^     ^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0271`.
